transfering to js and html

--- a/assets/BoxGame/html/2023-09-10-MidnightStalker.html
+++ b/assets/BoxGame/html/2023-09-10-MidnightStalker.html
@@ -14,6 +14,9 @@
             <button id="throwBomb">Throw Bomb</button>
         </div>
     </div>
-    <script src="{{site.baseurl}}/js/2023-09-10-MidnightStalker.js"></script>
+    <div>
+    <img id="ninjaSprite" src="{{site.baseurl}}/images/midnightStalker.png">
+    </div>
+    <script src="{{site.baseurl}}/assets/BoxGame/js/2023-09-10-MidnightStalker.js"></script>
 </body>
 </html>
