--- a/assets/BoxGame/html/2023-10-13-Pinky.html
+++ b/assets/BoxGame/html/2023-10-13-Pinky.html
@@ -1,21 +1,24 @@
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pinky</title>
+</head>
 <body>
     <div>
-        <canvas id="spriteContainer"> <!-- Within the base div is a canvas. An HTML canvas is used only for graphics. It allows the user to access some basic functions related to the image created on the canvas (including animation) -->
-            <img id="pinky" src="{{site.baseurl}}/images/pinky.png"> 
+        <canvas id="spriteContainer">
+            <img id="pinky" src="{{site.baseurl}}/images/pinky.png">
         </canvas>
-        <div id="controls"> <!--basic radio buttons which can be used to check whether each individual animation works -->
+        <div id="controls">
             <input type="radio" name="animation" id="A" checked>
             <label for="A">A</label><br>
-            <input type="radio" name="animation" id="B" checked>
+            <input type="radio" name="animation" id="B">
             <label for="B">B</label><br>
-            <input type="radio" name="animation" id="C" checked>
+            <input type="radio" name="animation" id="C">
             <label for="C">C</label><br>
-            <input type="radio" name="animation" id="D" checked>
+            <input type="radio" name="animation" id="D">
             <label for="D">D</label><br>
         </div>
-    </div>
-    <div>
-    <img id="pinky" src="{{site.baseurl}}/images/pinky.png">
     </div>
     <script src="{{site.baseurl}}/assets/BoxGame/js/2023-10-13-Pinky.js"></script>
 </body>
